@@ -1,15 +1,23 @@
 package community.flock.wirespec.integration.spring.java.generated.endpoint;
 
-import community.flock.wirespec.java.Wirespec;
-
 import community.flock.wirespec.integration.spring.java.generated.model.FindPetsByStatusParameterStatus;
 import community.flock.wirespec.integration.spring.java.generated.model.Pet;
+import community.flock.wirespec.java.Wirespec;
+
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+
+
+
 
 public interface FindPetsByStatus extends Wirespec.Endpoint {
   static class Path implements Wirespec.Path {}
 
   public record Queries(
-    java.util.Optional<FindPetsByStatusParameterStatus> status
+    Optional<FindPetsByStatusParameterStatus> status
   ) implements Wirespec.Queries {}
 
   static class RequestHeaders implements Wirespec.Request.Headers {}
@@ -21,7 +29,7 @@ public interface FindPetsByStatus extends Wirespec.Endpoint {
     RequestHeaders headers,
     Void body
   ) implements Wirespec.Request<Void> {
-    public Request(java.util.Optional<FindPetsByStatusParameterStatus> status) {
+    public Request(Optional<FindPetsByStatusParameterStatus> status) {
       this(new Path(), Wirespec.Method.GET, new Queries(status), new RequestHeaders(), null);
     }
   }
@@ -29,15 +37,15 @@ public interface FindPetsByStatus extends Wirespec.Endpoint {
   sealed interface Response<T> extends Wirespec.Response<T> {}
   sealed interface Response2XX<T> extends Response<T> {}
   sealed interface Response4XX<T> extends Response<T> {}
-  sealed interface ResponseListPet extends Response<java.util.List<Pet>> {}
+  sealed interface ResponseListPet extends Response<List<Pet>> {}
   sealed interface ResponseVoid extends Response<Void> {}
 
   record Response200(
     int status,
     Headers headers,
-    java.util.List<Pet> body
-  ) implements Response2XX<java.util.List<Pet>>, ResponseListPet {
-    public Response200(java.util.List<Pet> body) {
+    List<Pet> body
+  ) implements Response2XX<List<Pet>>, ResponseListPet {
+    public Response200(List<Pet> body) {
       this(200, new Headers(), body);
     }
     static class Headers implements Wirespec.Response.Headers {}
@@ -58,29 +66,29 @@ public interface FindPetsByStatus extends Wirespec.Endpoint {
     static Wirespec.RawRequest toRequest(Wirespec.Serializer serialization, Request request) {
       return new Wirespec.RawRequest(
         request.method().name(),
-        java.util.List.of("pet", "findByStatus"),
-        java.util.Map.ofEntries(java.util.Map.entry("status", serialization.serializeParam(request.queries().status(), Wirespec.getType(FindPetsByStatusParameterStatus.class, java.util.Optional.class)))),
-        java.util.Collections.emptyMap(),
-        java.util.Optional.empty()
+        List.of("pet", "findByStatus"),
+        Map.ofEntries(Map.entry("status", serialization.serializeParam(request.queries().status(), Wirespec.getType(FindPetsByStatusParameterStatus.class, Optional.class)))),
+        Collections.emptyMap(),
+        Optional.empty()
       );
     }
 
     static Request fromRequest(Wirespec.Deserializer serialization, Wirespec.RawRequest request) {
       return new Request(
-        serialization.<java.util.Optional<FindPetsByStatusParameterStatus>>deserializeParam(request.queries().getOrDefault("status", java.util.Collections.emptyList()), Wirespec.getType(FindPetsByStatusParameterStatus.class, java.util.Optional.class))
+        serialization.<Optional<FindPetsByStatusParameterStatus>>deserializeParam(request.queries().getOrDefault("status", Collections.emptyList()), Wirespec.getType(FindPetsByStatusParameterStatus.class, Optional.class))
       );
     }
 
     static Wirespec.RawResponse toResponse(Wirespec.Serializer serialization, Response<?> response) {
-      if (response instanceof Response200 r) { return new Wirespec.RawResponse(r.status(), java.util.Collections.emptyMap(), java.util.Optional.ofNullable(serialization.serializeBody(r.body, Wirespec.getType(Pet.class, java.util.List.class)))); }
-      if (response instanceof Response400 r) { return new Wirespec.RawResponse(r.status(), java.util.Collections.emptyMap(), java.util.Optional.empty()); }
+      if (response instanceof Response200 r) { return new Wirespec.RawResponse(r.status(), Collections.emptyMap(), Optional.ofNullable(serialization.serializeBody(r.body, Wirespec.getType(Pet.class, List.class)))); }
+      if (response instanceof Response400 r) { return new Wirespec.RawResponse(r.status(), Collections.emptyMap(), Optional.empty()); }
       else { throw new IllegalStateException("Cannot match response with status: " + response.status());}
     }
 
     static Response<?> fromResponse(Wirespec.Deserializer serialization, Wirespec.RawResponse response) {
       return switch (response.statusCode()) {
         case 200 -> new Response200(
-          response.body().<java.util.List<Pet>>map(body -> serialization.deserializeBody(body, Wirespec.getType(Pet.class, java.util.List.class))).orElse(null)
+          response.body().<List<Pet>>map(body -> serialization.deserializeBody(body, Wirespec.getType(Pet.class, List.class))).orElse(null)
         );
         case 400 -> new Response400();
         default -> throw new IllegalStateException("Cannot match response with status: " + response.statusCode());
@@ -88,7 +96,7 @@ public interface FindPetsByStatus extends Wirespec.Endpoint {
     }
 
     @org.springframework.web.bind.annotation.GetMapping("/pet/findByStatus")
-    java.util.concurrent.CompletableFuture<Response<?>> findPetsByStatus(Request request);
+    CompletableFuture<Response<?>> findPetsByStatus(Request request);
 
     class Handlers implements Wirespec.Server<Request, Response<?>>, Wirespec.Client<Request, Response<?>> {
       @Override public String getPathTemplate() { return "/pet/findByStatus"; }
